[gd_scene load_steps=3 format=3 uid="uid://cgbq4ij0w68oq"]

[ext_resource type="Script" uid="uid://ctkt0ac0hxhbb" path="res://Scripts/WordResultButton.gd" id="1_ca678"]
[ext_resource type="Texture2D" uid="uid://beofuduc44ie1" path="res://Art/CorrectIcon.png" id="1_yfo8u"]

[node name="Button" type="Button"]
custom_minimum_size = Vector2(600, 120)
script = ExtResource("1_ca678")

[node name="TargetText" type="Label" parent="."]
layout_mode = 0
offset_left = 78.0
offset_top = 20.0
offset_right = 878.0
offset_bottom = 76.0
theme_override_font_sizes/font_size = 30
text = "手机"
vertical_alignment = 1
autowrap_mode = 2

[node name="TranslatedText" type="Label" parent="."]
layout_mode = 0
offset_left = 78.0
offset_top = 50.0
offset_right = 878.0
offset_bottom = 106.0
theme_override_font_sizes/font_size = 30
text = "Cell phone"
vertical_alignment = 1
autowrap_mode = 2

[node name="Pinyin" type="Label" parent="."]
layout_mode = 0
offset_left = 78.0
offset_top = -9.0
offset_right = 878.0
offset_bottom = 47.0
theme_override_font_sizes/font_size = 25
text = "shou ji"
vertical_alignment = 1
autowrap_mode = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 71.0
offset_bottom = 113.0
texture = ExtResource("1_yfo8u")
stretch_mode = 5

[node name="IndexText" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "1/10"

[node name="FailStatuses" type="Label" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 94.0
offset_right = 47.0
offset_bottom = 117.0
text = "tries: 0, skipped"

[connection signal="button_up" from="." to="." method="_on_button_up"]
